--- a/src/components/home.css
+++ b/src/components/home.css
@@ -66,9 +66,12 @@ body {
 
 /* Footer styles */
 .footer {
-    background-color: #f8f9fa;
+    position: absolute;
+    background-color: #6fafef;
     padding: 20px 0;
     text-align: center;
+    bottom: 0;
+    width: 100%;
 }
 
 .footer p {
