--- a/src/components/home.css
+++ b/src/components/home.css
@@ -11,7 +11,7 @@
   }
   
   .hero-section {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://t4.ftcdn.net/jpg/01/31/15/51/240_F_131155172_4ZVdaT7YF5yJHqircjy59DDxV6aWFds9.jpg');
     background-size: cover;
     height: 100vh;
     display: flex;
