--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -17,7 +17,7 @@
 .bar {
   width: 100%;
   height: 3px;
-  background-color: #333;
+  background-color: #ffffff;
   transition: all 0.3s ease;
   justify-content: center;
 }
@@ -55,4 +55,9 @@
 .menu ul li:hover {
   background-color: #555;
   cursor: pointer;
+}
+
+.menu-items li a {
+  text-decoration: none;
+  color: #fff;
 }
