--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -1,27 +1,21 @@
-.profile {
+.profile-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 50px;
+}
+
+.profile-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #4CAF50;
+  border-radius: 5px;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #f5f5f5;
-  margin-bottom: 20px;
+  margin-top: 30px;
+  width: 300px;
 }
 
-.profile p {
-  margin: 5px 0;
-}
-
-.profile.email {
-  font-weight: bold;
-}
-
-.profile.mobile {
-  font-size: 1.1em;
-}
-
-.profile.pan {
-  font-size: 1.2em;
-  color: #3f51b5;
+.profile-info {
+  margin: 10px 0;
 }
