--- a/src/components/Signup.css
+++ b/src/components/Signup.css
@@ -1,15 +1,15 @@
 .signup-container {
-    width: 300px;
-    margin: 100px auto 0;
+    width: 700px;
+    margin: 50px auto 50px;
     padding: 20px;
     border: 1px solid #4CAF50; 
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #676e67;
 }
 
 .signup-container h2 {
     text-align: center;
-    margin-bottom: 20px;
 }
 
 .signup-container form {
@@ -18,7 +18,6 @@
 }
 
 .signup-container form input {
-    margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #4CAF50; /* Change this to your preferred color */
@@ -32,3 +31,18 @@
     color: white;
     cursor: pointer;
 }
+
+html {
+    height: 100%;
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
+  
+  #root {
+    background-color: #95ecef;
+    min-height: 100vh;
+  }
