--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,10 +1,11 @@
 .login-container {
-    width: 300px;
+    width: 600px;
     margin: 100px auto 0;
     padding: 20px;
-    border: 1px solid #4CAF50;
+    border: 1px solid #25b92a;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #25b92a;
 }
 
 .login-container h1 {
